# gnome.clipboard

./: .gitignore  README.md  engines.txt  meson.build  meson_options.txt
.github/workflows/: mirror.yaml
data/: emojis.json  ibus-component.xml  meson.build  org.example.EmojiInput.gschema.xml  org.example.EmojiInputPrefs.desktop
docs/: phase2-status.md  phase4-plan.md  phase5-plan.md  tasks.md
engine/: Cargo.toml  meson.build
engine/src/: emoji_db.rs  engine.rs  main.rs  search.rs
prefs/: Cargo.toml  meson.build
prefs/src/: main.rs
scripts/: debug-ibus.sh  install.sh  register-ibus-fixed.sh  register-ibus.sh  test-ibus-exec.sh  test-phase2.sh  uninstall.sh
ui/: Cargo.toml  meson.build
ui/src/: main.rs
