[package]
name = "emoji-input-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zbus = { version = "5.1", features = ["tokio"] }
zvariant = { version = "5.1", features = ["serde"] }
tokio = { version = "1.49", features = ["full"] }

[lib]
name = "emoji_input_engine"
path = "src/engine.rs"

[[bin]]
name = "emoji-input-engine"
path = "src/main.rs"
