[package]
name = "emoji-input-prefs"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9", package = "gtk4", features = ["v4_10"] }
libadwaita = { version = "0.7", package = "libadwaita", features = ["v1_4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glib = "0.20"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.49", features = ["full"] }