[package]
name = "emoji-input-ui"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
gtk4 = { version = "0.9", package = "gtk4" }
gio = "0.20"
glib = "0.20"
zbus = { version = "5.1", features = ["tokio"] }
zvariant = { version = "5.9" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.49", features = ["full", "rt-multi-thread"] }
futures-util = "0.3"

[[bin]]
name = "emoji-input-ui"
path = "src/main.rs"
